<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#FFFFFF">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/name_hint"
        android:minHeight="48dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:importantForAutofill="yes"
            android:textColor="#212121"
            android:textColorHint="#757575"
            tools:text="Иван Иванов"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/groupInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/group_hint"
        android:minHeight="48dp"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:importantForAutofill="yes"
            android:textColor="#212121"
            android:textColorHint="#757575"
            tools:text="ИТ-101"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/scoreInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/score_hint"
        android:minHeight="48dp"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:importantForAutofill="yes"
            android:textColor="#212121"
            android:textColorHint="#757575"
            tools:text="85"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSendData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/send_data_button"/>

    <Button
        android:id="@+id/btnOpenWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_web_button"/>
</LinearLayout>